# PowerPlantsOptimization

./: .gitignore  Modelo.md  README.md  pyproject.toml
src/: Datos.dzn  PlantaEnergia.mzn  gui.py  utils.py
src/InstanciasDatos/: Datos10.dzn  Datos11.dzn  Datos12.dzn  Datos2.dzn  Datos3.dzn  Datos4.dzn  Datos5.dzn  Datos6.dzn  Datos7.dzn  Datos8.dzn  Datos9.dzn
